--- a/Front/scss/_header.scss
+++ b/Front/scss/_header.scss
@@ -1,3 +1,62 @@
-header {
-    background-color: red !important;
+@use 'variables';
+
+nav {
+    background-color: variables.$blue-headers;
+    height: 64px;
+    display: flex;
+    align-items: center;
+
+    ul {
+        height: 100%;
+        display: flex;
+        align-items: center;
+
+        li {
+            height: 100%;
+            width: 72px;
+            margin-left: 17px;
+            margin-right: 17px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-bottom: 2px solid variables.$blue-headers;
+            cursor: pointer;
+
+            &:hover {
+                border-bottom: 2px solid white;
+                > a {
+                    font-weight: 700;
+                }
+            }
+
+            &.d-none {
+                display: none;   
+            }
+
+            &.li-regions {
+                width: 110px;
+            }
+
+            &.li-logout {
+                width: 50px;
+            }
+        }
+
+        
+    }
+
+    a {
+        font-size: 14px;
+        color: white;
+        text-decoration: none;
+        &:hover {
+            color: white;
+        }
+    }
+
+    .navbar-brand {
+        font-size: 24px;
+        color: white;
+        font-weight: 700;
+    }
 }
