add tables styles and icons

--- a/Front/scss/_modalUser.scss
+++ b/Front/scss/_modalUser.scss
@@ -48,6 +48,10 @@ input {
         color: white;
         margin: 0px;
     }
+
+    .icon-close {
+        font-weight: 400;
+    }
 }
 
 .form-header {
