--- a/Front/scss/_variables.scss
+++ b/Front/scss/_variables.scss
@@ -1,6 +1,10 @@
+$error-red : red;
+$red-button : #C35454;
+$green-button : #2C902C;
 $blue-headers : #0462BA;
 $blue-borders : #0683F9;
 $gray-borders : #CCCCCC;
-$green-button : #2C902C;
-$red-button : #C35454;
-$error-red : red;
+$gray-icons : rgba(0,0,0,0.50);
+$gray-row-hover : rgba(0,0,0,0.05);
+$gray-border-table: rgba(0,0,0,0.10);
+$gray-border-table-hover: rgba(0,0,0,0.20);
