--- a/Front/scss/_reset.scss
+++ b/Front/scss/_reset.scss
@@ -5,3 +5,23 @@
     font-family: 'Open Sans', 'sans-serif';
     font-size: 13px;
 }
+
+h2 {
+    color: black;
+    display: inline-block;
+    font-size: 24px;
+    font-weight: 700;
+}
+
+button {
+    height: 42px;
+    width: 180px;
+    border: none;
+    outline: none;
+    border-radius: 2px;
+    font-size: 14px;
+}
+
+a {
+    text-decoration: none;
+}
