--- a/Front/scss/_tables.scss
+++ b/Front/scss/_tables.scss
@@ -20,12 +20,30 @@
 
     &-header,  &-row{
         height: 56px;
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1.2fr 0.9fr 120px;
+        justify-content: center;
         align-items: center;
+
+        > * {
+            height: inherit;
+            display: flex;
+            align-items: center;
+        }
     }
 
     &-header{
         border-bottom: 1px solid variables.$gray-border-table;
+
+        .icon-exchange {
+            display: inline-block;
+            font-size: 10px;
+            font-weight: 400;
+            transform: rotate(90deg);
+            margin: 0px;
+            margin-left: 8px;
+            padding: 0px;
+        }
     }
 
     &-row:nth-last-child(1) {
@@ -37,14 +55,15 @@
     }
 
     .actions {
-        width: 82px;
         height: 100%;
+        padding: 0px;
         display: flex;
         align-items: center;
         justify-content: center;
 
         * {
             font-size: 18px;
+            padding: 0px;
             color: variables.$gray-icons;
             height: 100%;
             display: flex;
@@ -57,6 +76,10 @@
             display: none;
             font-size: 20px;
         }
+
+        .icon-dots-three-horizontal {
+            padding: 0px;
+        }
     }
 
     &-row:hover {
@@ -64,6 +87,10 @@
         border-left: 1px solid variables.$gray-border-table-hover;
         border-right: 1px solid variables.$gray-border-table-hover;
         
+        .position {
+            border-left: 1px solid variables.$gray-border-table;
+            border-right: 1px solid variables.$gray-border-table;
+        }
         .actions {
             border-left: 1px solid variables.$gray-border-table;
         }
