--- a/Front/styles/icons.css
+++ b/Front/styles/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?65xrel');
-  src:  url('../fonts/icomoon.eot?65xrel#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?65xrel') format('truetype'),
-    url('../fonts/icomoon.woff?65xrel') format('woff'),
-    url('../fonts/icomoon.svg?65xrel#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?3izk9m');
+  src:  url('../fonts/icomoon.eot?3izk9m#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?3izk9m') format('truetype'),
+    url('../fonts/icomoon.woff?3izk9m') format('woff'),
+    url('../fonts/icomoon.svg?3izk9m#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-exchange:before {
+  content: "\e90f";
+}
 .icon-camera:before {
   content: "\e905";
 }
@@ -42,12 +45,6 @@
 }
 .icon-close:before {
   content: "\e901";
-}
-.icon-transfer1:before {
-  content: "\e90e";
-}
-.icon-transfer:before {
-  content: "\e904";
 }
 .icon-add:before {
   content: "\e907";
