fix table and modal styles

--- a/Front/scss/_modalUser.scss
+++ b/Front/scss/_modalUser.scss
@@ -98,6 +98,7 @@ input {
     padding: 100px calc(2.5% + 16px) 30px;
     position: relative;
     transform: translateY(-130px);
+    min-height: 160px;
     display: flex;
     align-items: center;
 
