--- a/Front/scss/_reset.scss
+++ b/Front/scss/_reset.scss
@@ -22,6 +22,10 @@ button {
     font-size: 14px;
 }
 
+.accordion-button, .accordion-header {
+    width: 100%;
+}
+
 a {
     text-decoration: none;
 }
