--- a/Front/scss/_reset.scss
+++ b/Front/scss/_reset.scss
@@ -13,6 +13,13 @@ h2 {
     font-weight: 700;
 }
 
+h3 {
+    color: black;
+    display: inline-block;
+    font-size: 18px;
+    font-weight: 700;
+}
+
 button {
     height: 42px;
     width: 180px;
