--- a/Front/scss/_accordionActions.scss
+++ b/Front/scss/_accordionActions.scss
@@ -16,7 +16,11 @@
         align-items: center;
         justify-content: center;
         z-index: 3;
-
+        
+        &.rm-button {
+            right: 30px;
+        }
+        
         * {
             font-size: 18px;
             padding: 0px;
@@ -50,5 +54,9 @@
                 margin-left: 14px;
             }
         }
+    }
+
+    .accordion-button.rm-button::after {
+        background-image: none;
     }
 }
