add city id to result from company by id query

--- a/Front/scss/_modalUser.scss
+++ b/Front/scss/_modalUser.scss
@@ -81,6 +81,10 @@ input {
         width: 25%;
     }
 
+    &.row-5 > * {
+        width: 20%;
+    }
+
     input, select {
 
         margin: 10px 0px 2px;
