add progress bar styles

--- a/Front/scss/_reset.scss
+++ b/Front/scss/_reset.scss
@@ -36,3 +36,12 @@ button {
 a {
     text-decoration: none;
 }
+
+input {
+    border: none;
+    outline: none;
+
+    &:focus {
+        outline: none;
+    }
+}
