--- a/Front/scss/_variables.scss
+++ b/Front/scss/_variables.scss
@@ -8,3 +8,8 @@ $gray-icons : rgba(0,0,0,0.50);
 $gray-row-hover : rgba(0,0,0,0.05);
 $gray-border-table: rgba(0,0,0,0.10);
 $gray-border-table-hover: rgba(0,0,0,0.20);
+$progress-25: #1CC1F5;
+$progress-50: #FFC700;
+$progress-75:  #FF6F00;
+$progress-100: #DE0028;
+
