--- a/Front/scss/_tables.scss
+++ b/Front/scss/_tables.scss
@@ -14,6 +14,7 @@
 
     &.contacts {
         height: 42px;
+        margin-bottom: 10px;
     }
 }
 
@@ -66,7 +67,7 @@
     border: 1px solid variables.$gray-border-table;
 
     &.contact {
-        margin-top: 75px;
+        margin-top: 60px;
     }
 
     .checkbox {
@@ -87,7 +88,7 @@
         }
 
         &.contact {
-            grid-template-columns: 56px 1fr 1fr 1fr 1fr 1fr 100px;
+            grid-template-columns: 56px 1.3fr 0.9fr 0.9fr 1.1fr 1.1fr 100px;
         }
 
         > * {
@@ -179,13 +180,58 @@
     }
 }
 
+.contact-info {
+
+    .icon-person {
+        position: relative;
+        color: rgba(0,0,0,0.25);
+        font-size: 17px;
+        width: 24px;
+        height: 24px;
+        border-radius: 12px;
+        background-color: variables.$gray-border-table;
+
+        &:before {
+            position: absolute;
+            top: 3px;
+            left: 4px;
+        }
+    }
+
+    .contact-email {
+        color: variables.$gray-icons;
+        font-size: 11px;
+    }
+
+    .name-email > span {
+        padding-left: 8px;
+    }
+}
+
+.contact-region {
+    
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+
+    span {
+        padding: 0px;
+        padding-left: 16px;
+
+        &:nth-child(2) {
+            color: variables.$gray-icons;
+            font-size: 11px;
+        }
+    }
+}
+
 .interest {
 
     padding-right: 16px;
 
     .percentage {
         width: 56px;
-        text-align: right;
+        text-align: left;
     }
     
     .bar-bg {
@@ -222,8 +268,7 @@
             width: 100%;
             background-color: variables.$progress-100;
         }
-    }
-
-    
+    }   
 }
+
 
