--- a/Front/styles/icons.css
+++ b/Front/styles/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?3izk9m');
-  src:  url('../fonts/icomoon.eot?3izk9m#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?3izk9m') format('truetype'),
-    url('../fonts/icomoon.woff?3izk9m') format('woff'),
-    url('../fonts/icomoon.svg?3izk9m#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?osmpp8');
+  src:  url('../fonts/icomoon.eot?osmpp8#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?osmpp8') format('truetype'),
+    url('../fonts/icomoon.woff?osmpp8') format('woff'),
+    url('../fonts/icomoon.svg?osmpp8#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -13,7 +13,7 @@
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
-  speak-as: never;
+  /* speak: never; */
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -45,6 +45,9 @@
 }
 .icon-close:before {
   content: "\e901";
+}
+.icon-person:before {
+  content: "\e904";
 }
 .icon-add:before {
   content: "\e907";
