fix base styles

--- a/Front/styles/styles.css
+++ b/Front/styles/styles.css
@@ -46,6 +46,10 @@ input:focus {
   outline: none;
 }
 
+#login-btn {
+  margin: 8px auto 0px;
+}
+
 nav {
   background-color: #0462BA;
   height: 64px;
